# ecg-chagas-embeddings

./: .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  README.md  main.py  pyproject.toml  run_experiment.sh
.github/workflows/: ci.yml  release-please.yml
configs/: base.yaml
src/ecg_chagas_embeddings/: helper_code.py  train.py  utils.py
src/ecg_chagas_embeddings/data/: augmentation.py  dataloader_baseline.py  dataset.py  prepare_dataset.py  stats.py
src/ecg_chagas_embeddings/models/: losses.py  metrics.py  resnet18_ecg_baseline.py  resnet18_ecg_flex.py
tests/: test_smoke.py
